--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,9 +45,9 @@ jobs:
           rm -rfv out/build/*
           echo -e "\n# Move the generated docs to the newly-checked-out repo, to be committed and pushed"
           rsync -vaI README.md out/
-          rsync -vaI build/ out/build
+          rsync -vaI build/ out
           echo -e "\n# Removing TSC incremental file"
-          rm -rfv out/build/**/*.tsbuildinfo
+          rm -rfv out/**/*.tsbuildinfo
           echo -e "\n# Commit and push"
           cd out
           git add --all .
