--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "noImplicitAny": true,
     "esModuleInterop": true,
     "target": "ES6",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "resolveJsonModule": true
   }
 }
